bk_ida/gccida/c0/debug_bitmap_file
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/debug_bitmap_file/src/bitmap.c:1212:16: error: use of undeclared identifier 'asc_7D3A5A'
fprintf( file, asc_7D3A5A); 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/debug_bitmap_file/src/bitmap.c:1227:16: error: use of undeclared identifier 'asc_7D3A57'
fprintf( file, asc_7D3A57); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/debug_bitmap_file/src/obj/bitmap.o] Error 1
